syntax = "proto3";
package pb;

message Location {
  uint32 x = 1;
  uint32 y = 2;
}

message JoinGameResponse {
  string playerId = 1;
  string color = 2;
  Location spawn = 3;

  repeated JoinGameResponse others = 4;
}

message MoveAction {
  uint64 playerId = 1;
  Location target = 2;
}

message ConnectAction { uint64 playerId = 1; }
message DisconnectAction { uint64 playerId = 1; }

message AttackAction {
  uint64 sourcePlayerId = 1;
  uint64 targetPlayerId = 2;
}

message DamageAction {
  uint64 sourcePlayerId = 1;
  uint64 targetPlayerId = 2;
  int32 damageDealt = 3;
}

message GameTick {
  uint32 tick = 1;
  repeated ConnectAction connects = 2;
  repeated DisconnectAction disconnects = 3;
  repeated MoveAction moves = 4;
  repeated AttackAction attacks = 5;
}

service GameServer { rpc RequestAttack(AttackAction) returns (?);
}
